tab overlap issue

--- a/public/after_login/current_ui/css/mobile.css
+++ b/public/after_login/current_ui/css/mobile.css
@@ -2309,6 +2309,6 @@
     }
     .examLeftpanel .nav-item {
         position: relative;
-        margin-right: 20px !important;
+        margin-right: 40px !important;
     }
 }
